argoCD/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ayane-payment-api
spec:
  selector:
    app: ayane-payment-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
